--- a/html/css/farpi.css
+++ b/html/css/farpi.css
@@ -1,15 +1,20 @@
 :root {
     --highlight: #87fded;
     --glow: #1481c4;
-    --inactive: #444444;
-    --active: #AAAAAA;
-    --background: #202020;
+    --inactive: #001f3b;
+    --active: #078EAA;
+    --background: #012d52;
+    --label: #AAAAAA;
 }
 
 body {
-    background-color: var(--background);
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 	min-height: 100%;
-	color: var(--active);
+	color: var(--label);
     font-family: 'Abel', sans-serif;
     font-size: 20pt;
 }
@@ -30,20 +35,21 @@ hr {
     border-color: var(--glow);
     margin: 1em 0;
     padding: 0;
-    box-shadow: 0 0 25px var(--glow);
+    box-shadow: 0 0 15px var(--glow);
 }
 
 .HeartBeat {
     border-style: solid;
     border-width: 1px;
-    border-radius: 0 6px;
+    border-radius: 50%;
     border-color: var(--active);
     background: var(--inactive);
     display: inline-block;
     margin: 15px;
-    width: 15px;
-    height: 15px;
+    width: 10px;
+    height: 10px;
     float: right;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.5s;
 }
 
 .HeartBeatGlow {
@@ -52,42 +58,154 @@ hr {
     background: var(--glow);
 }
 
+.panel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .LED {
     border-style: solid;
     border-width: 1px;
-    border-radius: 0 10px;
+    border-radius: 1em 0.25em 0.25em 1em;
     border-color: var(--inactive);
+    background-color: var(--background);
     box-shadow: 0 0 15px var(--inactive);
-    display: inline-block;
     margin: 10px;
     vertical-align: middle;
-    line-height: 2em;
-    padding:10px;
+    padding: 10px;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .LED_indicator {
     border-style: solid;
     border-width: 1px;
-    border-radius: 0 6px;
+    border-radius: 50%;
     border-color: var(--active);
     background: var(--inactive);
     display: inline-block;
+    margin: 0;
     margin-right: 1ex;
     width: 1em;
     height: 1em;
     vertical-align: middle;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
 }
 
-.LED_label {
+.label {
     display: inline-block;
     height: 1em;
+    font-size: 20pt;
+    vertical-align: middle;
+    transition: color 0.5s;
+
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version */
 }
 
+.toggle_switch {
+    border-style: solid;
+    border-color: var(--active);
+    border-width: 1px;
+    border-radius: 0.5em;
+    display: flex;
+    align-items: center;
+    height: 1em;
+    width: 2em;
+    margin: 0;
+    margin-right: 1ex;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
+}
+
+.toggle_indicator {
+    border-style: solid;
+    border-width: 0px;
+    border-radius: 50%;
+    border-color: var(--active);
+    background: var(--inactive);
+    display: inline-block;
+    margin: 0;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s, margin 0.25s;
+}
+
+.toggle_switch_on {
+    background: var(--active);
+}
+
+.toggle_on {
+    margin-left: 1em;
+    background: var(--highlight);
+}
+
+.interactive:hover {
+    border-color: var(--highlight);
+    cursor: pointer;
+}
+
+
 .LED_on {
-    background: var(--glow);
+    background: var(--highlight);
 }
 
 .on_glow {
     border-color: var(--highlight);
     box-shadow: 0 0 25px var(--glow);
+}
+
+.LineGauge {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1em 0.25em 0.25em 1em;
+    border-color: var(--inactive);
+    background-color: var(--background);
+    box-shadow: 0 0 15px var(--inactive);
+    /*margin: 10px;*/
+    vertical-align: middle;
+    padding: 10px;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.LineGauge_indicator {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0 0 0 0;
+    border-color: var(--active);
+    background: var(--inactive);
+    display: flex;
+    align-items: center;
+    margin-left: 0.5em;
+    margin-right: 1ex;
+    width: 5em;
+    height: 0.75em;
+    vertical-align: middle;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
+}
+
+.LineGauge_bar {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0 0 0 0;
+    border-color: var(--active);
+    background: var(--highlight);
+    box-shadow: 0 0 25px var(--glow);
+    display: inline-block;
+    margin: 0;
+    width: 4em;
+    height: 100%;
+    vertical-align: middle;
+    transition: width 0.25s;
 }
