--- a/html/css/farpi.css
+++ b/html/css/farpi.css
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    background-size: cover;
+    /*background-size: cover;*/
 	min-height: 100%;
 	color: var(--label);
     font-family: 'Abel', sans-serif;
