--- a/html/css/farpi.css
+++ b/html/css/farpi.css
@@ -261,11 +261,52 @@ hr {
     overflow: auto;
 }
 
+.ArcGauge {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1em 0.25em 0.25em 1em;
+    border-color: var(--inactive);
+    background-color: var(--background);
+    box-shadow: 0 0 15px var(--inactive);
+    margin: 10px;
+    vertical-align: middle;
+    padding: 10px;
+    transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ArcGaugeContainer {
+    width: 60px;
+    height: 100px;
+}
+
+.ArcGauge_scale_bg {
+    fill-opacity: 0;
+    stroke: var(--inactive);
+    stroke-width: 16px;
+    stroke-linecap: round;
+}
+
+.ArcGauge_scale_outline {
+    fill-opacity: 0;
+    stroke: var(--active);
+    stroke-width: 18px;
+    stroke-linecap: round;
+}
+
+.ArcGauge_bar {
+    fill-opacity: 0;
+    stroke: var(--highlight);
+    stroke-width: 10px;
+    stroke-linecap: round;
+}
+
 .interactive:hover {
     border-color: var(--highlight);
     cursor: pointer;
 }
-
 
 .LED_on {
     background: var(--highlight);
