--- a/html/css/farpi.css
+++ b/html/css/farpi.css
@@ -152,6 +152,23 @@ hr {
     user-select: none; /* Non-prefixed version */
 }
 
+.GaugeLabel {
+    display: inline-block;
+    height: 1em;
+    font-size: 12pt;
+    vertical-align: top;
+    float: right;
+    z-index: 1000;
+    transition: color 0.5s;
+
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version */
+}
+
 .toggle_switch {
     border-style: solid;
     border-color: var(--active);
@@ -264,7 +281,7 @@ hr {
 .ArcGauge {
     border-style: solid;
     border-width: 1px;
-    border-radius: 1em 0.25em 0.25em 1em;
+    border-radius: 1em 1em 1em 1em;
     border-color: var(--inactive);
     background-color: var(--background);
     box-shadow: 0 0 15px var(--inactive);
@@ -278,7 +295,7 @@ hr {
 }
 
 .ArcGaugeContainer {
-    width: 60px;
+    width: 100px;
     height: 100px;
 }
 
@@ -301,6 +318,16 @@ hr {
     stroke: var(--highlight);
     stroke-width: 10px;
     stroke-linecap: round;
+}
+
+.ArcGaugeText {
+    fill: var(--highlight);
+    font-size: 30px;
+}
+
+.ArcGaugeLabel {
+    fill: var(--highlight);
+    font-size: 22px;
 }
 
 .interactive:hover {
