--- a/html/css/farpi.css
+++ b/html/css/farpi.css
@@ -13,6 +13,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    background-color: black;
 	min-height: 100%;
 	color: var(--label);
     font-family: 'Abel', sans-serif;
