Got very basic connection to server from Angular application. Removed all legacy FarPi UI code.

--- a/farpi2/src/app/app.component.html
+++ b/farpi2/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <!-- Toolbar -->
   <div class="title" role="banner">
-    <span>FarPi</span>
-    <div class="HeartBeat" id="HeartBeat">- FarPi -</div>
+    <span>FarPi v2</span>
+    <div class="HeartBeat" id="HeartBeat">&nbsp;</div>
   </div>
   <hr />
   <div class="content" role="main">
@@ -20,6 +20,8 @@
     <div class="terminal">
         <pre>Message output here</pre>
     </div>
+
+    <app-base-control></app-base-control>
 
     <!-- Footer -->
     <footer>
