Got the original style sheets working and began work on the basic heartbeat component. Successfully connecting a service to the backend FarPi server.

--- a/farpi2/src/app/app.component.html
+++ b/farpi2/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- Toolbar -->
   <div class="title" role="banner">
     <span>FarPi v2</span>
-    <div class="HeartBeat" id="HeartBeat">&nbsp;</div>
+    <app-heartbeat></app-heartbeat>
   </div>
   <hr />
   <div class="content" role="main">
@@ -20,8 +20,6 @@
     <div class="terminal">
         <pre>Message output here</pre>
     </div>
-
-    <app-base-control></app-base-control>
 
     <!-- Footer -->
     <footer>
