Make significant progress with the UI

--- a/farpi2/src/app/app.component.html
+++ b/farpi2/src/app/app.component.html
@@ -7,19 +7,9 @@
   <hr />
   <div class="content" role="main">
 
-    <!-- Highlight Card -->
-    <div>
-      <span>{{ title }} app is running!</span>
-    </div>
+    <app-led label="Wibble" pin="bcm00"></app-led>
 
-    <!-- Next Steps -->
-    <h2>Next Steps</h2>
-    <p>What do you want to do next with your app?</p>
-
-    <!-- Terminal -->
-    <div class="terminal">
-        <pre>Message output here</pre>
-    </div>
+    <app-messagebox></app-messagebox>
 
     <!-- Footer -->
     <footer>
