--- a/marvin_ui/src/app/app.component.html
+++ b/marvin_ui/src/app/app.component.html
@@ -1,27 +1,25 @@
 <div>
-  <!-- Toolbar -->
   <div data-augmented-ui="border br-clip-x bl-clip-x" class="farpi-title" role="banner">
-    <span>Marvin</span>
+    <img src="assets/marvin_banner.jpg" />
     <app-heartbeat></app-heartbeat>
   </div>
-  <div>
-   <!-- class="farpi-panel" role="main"> -->
-    <div>
-      <!-- class="row"> -->
+  
+  <div class="farpi-panel" role="main">
+    <div class="farpi-row">
       <app-led label="BCM00" pin="bcm00" class="col-sm-3"></app-led>
-      <!-- <app-led label="BCM01" pin="bcm01" class="col-sm-3"></app-led>
+      <app-led label="BCM01" pin="bcm01" class="col-sm-3"></app-led>
       <app-led label="BCM02" pin="bcm02" class="col-sm-3"></app-led>
-      <app-led label="BCM03" pin="bcm03" class="col-sm-3"></app-led> -->
+      <!-- <app-led label="BCM03" pin="bcm03" class="col-sm-3"></app-led> -->
     </div>
-    <div class="row">
-      <app-messagebox class="col-sm-6 offset-sm-3"></app-messagebox>
+    <div class="farpi-row">
+      <app-led label="BCM00" pin="bcm00" class="col-sm-3"></app-led>
+      <app-led label="BCM01" pin="bcm01" class="col-sm-3"></app-led>
+      <app-led label="BCM02" pin="bcm02" class="col-sm-3"></app-led>
+      <!-- <app-led label="BCM03" pin="bcm03" class="col-sm-3"></app-led> -->
     </div>
-
-    <!-- Footer -->
-    <footer>
-
-    </footer>
-
+    <div class="farpi-row">
+      <app-messagebox class="col-sm-6"></app-messagebox>
+    </div>
   </div>
 
   <router-outlet></router-outlet>
