--- a/marvin_ui/src/app/controls/heartbeat/heartbeat.component.html
+++ b/marvin_ui/src/app/controls/heartbeat/heartbeat.component.html
@@ -1,1 +1,3 @@
-<div [ngClass]="classes" id="HeartBeat">FarPi</div>
+<div data-augmented-ui-reset>
+    <div data-augmented-ui="border tl-clip tr-clip bl-clip br-clip" [ngClass]="classes" id="HeartBeat">&nbsp;</div>
+</div>
