--- a/marvin_ui/src/app/controls/led/led.component.html
+++ b/marvin_ui/src/app/controls/led/led.component.html
@@ -1,11 +1,6 @@
-<!-- <div class="farpi-LED" [class.farpi-on_glow]="state">
-    <span class="farpi-LED_indicator" [class.farpi-LED_on]="state">&nbsp;</span>
-    <span class="farpi-label">{{ label }}</span>
-</div> -->
-
-<div class="farpi-LED" data-augmented-ui="border tr-clip tl-clip bl-clip br-clip">
+<div class="farpi-LED" data-augmented-ui="border bl-clip tr-clip br-round tl-round">
     <div data-augmented-ui-reset>
-        <div data-augmented-ui="border tl-clip br-clip" class="farpi-LED_indicator" [class.farpi-LED_on]="state">&nbsp;</div>
+        <div data-augmented-ui="border bl-clip tr-clip" class="farpi-LED_indicator" [class.farpi-LED_on]="state">&nbsp;</div>
         <span class="farpi-label">{{ label }}</span>
     </div>
 </div>
