--- a/marvin_ui/src/app/controls/led/led.component.scss
+++ b/marvin_ui/src/app/controls/led/led.component.scss
@@ -7,16 +7,17 @@ $background: #523201;
 $label: #AAAAAA;
 
 .farpi-LED {
-    --aug-tr: 5px;
-    --aug-tl: 30px;
-    --aug-bl: 5px;
-    --aug-br: 30px;
+    --aug-tr: 25px;
+    --aug-tl: 8px;
+    --aug-bl: 25px;
+    --aug-br: 8px;
     --aug-border-all: 1px;
     --aug-border-bg: #fdde87;
     color: #fdde87;
-    width: 20em;
-    margin: 1em;
-    background: $background;
+    // width: 20em;
+    //margin: 1em;
+    //margin-right: -50px;
+    background: #000000; //$background;
     font-size:12pt;
     vertical-align: middle;
     justify-content: left;
@@ -26,21 +27,16 @@ $label: #AAAAAA;
   }
 
 .farpi-LED_indicator {
-  --aug-tl: 20px;
-  --aug-br: 20px;
+  --aug-tl: 5px;
+  --aug-br: 5px;
   --aug-border-all: 1px;
   --aug-border-bg: #fdde87;
 
-  // border-style: solid;
-  // border-width: 1px;
-  // border-radius: 50%;
-  // border-color: $active;
-  //background: $active;
   display: inline-block;
   margin: 0;
   margin-right: 1ex;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   vertical-align: middle;
   transition: background 0.5s, box-shadow 0.5s, border-color 0.25s;
   
