--- a/marvin_ui/src/app/controls/messagebox/messagebox.component.html
+++ b/marvin_ui/src/app/controls/messagebox/messagebox.component.html
@@ -1,1 +1,3 @@
-<textarea readonly class="farpi-MessageBox">{{ buffer }}</textarea>
+<div class="farpi-container" data-augmented-ui="border tl-clip tr-clip bl-clip br-clip-y b-clip" style="background:#523201">
+    <textarea readonly class="farpi-MessageBox">{{ buffer }}</textarea>
+</div>
