--- a/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.html
+++ b/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.html
@@ -1,1 +1,3 @@
-<div [ngClass]="classes" id="HeartBeat">FarPi</div>
+<button mat-mini-fab color="none" aria-label="Example icon button with a filter list icon">
+    <mat-icon [ngClass]="classes">sensors</mat-icon>
+</button>
