--- a/marvin_ui2/src/app/controls/marvin_toolbar/marvin_toolbar.component.html
+++ b/marvin_ui2/src/app/controls/marvin_toolbar/marvin_toolbar.component.html
@@ -4,11 +4,5 @@
     </button>
     <span>Marvin Control Center</span>
     <span class="menu-bar-spacer"></span>
-    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-      <mat-icon>more_vert</mat-icon>
-    </button>
+    <app-heartbeat></app-heartbeat>
 </mat-toolbar>
-<!-- <mat-progress-bar
-  color="primary"
-  mode="indeterminate">
-</mat-progress-bar> -->
