--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -1,12 +1,3 @@
 <marvin-toolbar></marvin-toolbar>
-
-<mat-grid-list cols="2" rowHeight="30em" gutterSize="2em">
-  <mat-grid-tile rowspan="2">
-    <control-panel></control-panel>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <control-panel></control-panel>
-  </mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list>
+<control-panel></control-panel>
+<console></console>
