--- a/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.html
+++ b/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.html
@@ -1,3 +1,3 @@
 <button mat-mini-fab color="none" aria-label="Example icon button with a filter list icon">
-    <mat-icon [ngClass]="classes">sensors</mat-icon>
+    <mat-icon [ngClass]="classes">podcasts</mat-icon>
 </button>
