--- a/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.scss
+++ b/marvin_ui2/src/app/controls/heartbeat/heartbeat.component.scss
@@ -1,10 +1,10 @@
 
-.farpi-HeartBeat {
+.heartBeatOn {
     transition: color 0.5s; //background 0.5s, box-shadow 0.5s, border-color 0.5s, 
     color: white;
 }
 
-.farpi-HeartBeatGlow {
+.heartBeatOff {
     // border-color: yellow;
     // box-shadow: 0 0 25px black;
     // background: yellow;
