--- a/marvin_ui2/src/app/controls/control-panel/control-panel.component.html
+++ b/marvin_ui2/src/app/controls/control-panel/control-panel.component.html
@@ -5,10 +5,11 @@
     </mat-card-header>
     <mat-card-content>
         <mat-chip-list >
-            <led label="BCM00" pin="bcm00"></led>
-            <led label="BCM01" pin="bcm01"></led>
+            <led label="Square Wave Source" pin="bcm00"></led>
+            <switch-toggle label="BCM01" pin="bcm01"></switch-toggle>
             <led label="BCM02" pin="bcm02"></led>
             <led label="BCM03" pin="bcm03"></led>
+            <switch-momentary label="BCM04" pin="bcm04"></switch-momentary>
         </mat-chip-list>
     </mat-card-content>
 </mat-card>
