--- a/marvin_ui2/src/app/controls/led/led.component.html
+++ b/marvin_ui2/src/app/controls/led/led.component.html
@@ -1,5 +1,4 @@
 <mat-chip selected [color]="stateColour">
-    <mat-icon *ngIf="state">radio_button_checked</mat-icon>
-    <mat-icon *ngIf="!state">radio_button_unchecked</mat-icon>&nbsp;&nbsp;{{ label }}
+    &nbsp;&nbsp;{{ label }}
 </mat-chip>
 
