--- a/marvin_ui2/src/app/controls/switch-momentary/switch-momentary.component.html
+++ b/marvin_ui2/src/app/controls/switch-momentary/switch-momentary.component.html
@@ -1,4 +1,4 @@
-<mat-chip selected [color]="stateColour" (mousedown)="action_down()" (mouseup)="action_up()">
+<mat-chip selected [color]="stateColour" (mousedown)="action_down()" (mouseup)="action_up()" (mouseout)="action_up()">
     <mat-icon *ngIf="state">radio_button_checked</mat-icon>
     <mat-icon *ngIf="!state">radio_button_unchecked</mat-icon>&nbsp;&nbsp;{{ label }}
 </mat-chip>
