--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -1,4 +1,9 @@
 <marvin-toolbar></marvin-toolbar>
-<control-panel></control-panel>
-<console></console>
-<camera></camera>
+
+<div class="row">
+    <div class="col-sm-6">
+        <control-panel></control-panel>
+        <console></console>
+    </div>
+    <camera class="col-sm-6"></camera>        
+</div>
