--- a/marvin_ui2/src/app/controls/camera/camera.component.html
+++ b/marvin_ui2/src/app/controls/camera/camera.component.html
@@ -4,6 +4,6 @@
         <mat-card-title>Navigation Camera</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <img id="camera-image" [src]="image" style="width:500px;" (load)="onload"/>
+        <img id="camera-image" [src]="image" style="width: 100%;" (load)="onload"/>
     </mat-card-content>
 </mat-card>
