Adding interactive movement components and wiring them up

--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -3,7 +3,10 @@
 <div class="row">
     <div class="col-sm-6">
         <control-panel></control-panel>
+        <d-pad></d-pad>
         <console></console>
     </div>
-    <camera class="col-sm-6"></camera>        
+    <div class="col-sm-6">
+        <camera></camera>
+    </div>
 </div>
