Updated motion RPC packet format

--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -1,12 +1,14 @@
 <marvin-toolbar></marvin-toolbar>
 
-<div class="row">
-    <div class="col-sm-6">
-        <control-panel></control-panel>
-        <d-pad></d-pad>
-        <console></console>
-    </div>
-    <div class="col-sm-6">
-        <camera></camera>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm">
+            <control-panel></control-panel>
+            <d-pad></d-pad>
+            <console></console>
+        </div>
+        <div class="col-sm">
+            <camera></camera>
+        </div>
     </div>
 </div>
