Implemented a much simpler video streamer that should have better performance than the websockets version

--- a/marvin_ui2/src/app/controls/camera/camera.component.html
+++ b/marvin_ui2/src/app/controls/camera/camera.component.html
@@ -4,6 +4,7 @@
         <mat-card-title>Navigation Camera</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <img id="camera-image" [src]="image" style="width: 100%;" (load)="onload"/>
+<!--        <img id="camera-image" [src]="image" style="width: 100%;" (load)="onload"/>-->
+      <img src="http://127.0.0.1:5000/video_feed" />
     </mat-card-content>
 </mat-card>
