--- a/streamer/templates/index.html
+++ b/streamer/templates/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Marvin Video Stream</title>
 </head>
 <body>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-8  offset-lg-2">
-      <h3 class="mt-5">Live Streaming</h3>
-      <img src="{{ url_for('video_feed') }}" width="100%">
+      <img src="{{ url_for('video_feed') }}">
     </div>
   </div>
 </div>
