--- a/streamer_realsense/templates/index.html
+++ b/streamer_realsense/templates/index.html
@@ -10,6 +10,8 @@
   <div class="row">
     <div class="col-lg-8  offset-lg-2">
       <img src="{{ url_for('video_feed') }}">
+      <img src="{{ url_for('depth_feed') }}">
+      <img src="{{ url_for('ir_feed') }}">
     </div>
   </div>
 </div>
