Updated UI packages

--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -2,13 +2,17 @@
 
 <div class="container-fluid">
     <div class="row">
+      <div class="col-sm">
+        <camera></camera>
+        <camera></camera>
+        <camera></camera>
+      </div>
+    </div>
+    <div class="row">
         <div class="col-sm">
             <control-panel></control-panel>
             <d-pad></d-pad>
             <console></console>
-        </div>
-        <div class="col-sm">
-            <camera></camera>
         </div>
     </div>
 </div>
