Added servo positon logic to handle degrees

--- a/marvin_ui2/src/app/controls/d-pad/d-pad.component.html
+++ b/marvin_ui2/src/app/controls/d-pad/d-pad.component.html
@@ -5,6 +5,8 @@
     </mat-card-header>
     <mat-card-content>
         <mat-grid-list cols="6" rowHeight="3em">
+<!--          (keydown.ArrowLeft)="onLeft($event)" (keydown.ArrowRight)="onRight($event)"-->
+<!--          (keydown.ArrowUp)="onUp($event)" (keydown.ArrowDown)="onDown($event)"-->
             <!-- Movement buttons -->
             <!-- Top row -->
             <mat-grid-tile colspan="3">
