Added a dial control

--- a/marvin_ui2/src/app/app.component.html
+++ b/marvin_ui2/src/app/app.component.html
@@ -4,7 +4,8 @@
 
   <div class="row">
     <div class="col-sm">
-      <camera label="Navigation Camera" url="http://{{vision_server}}/video_feed"></camera>
+<!--      <camera label="Navigation Camera" url="http://{{vision_server}}/video_feed"></camera>-->
+      <dial></dial>
     </div>
     <div class="col-sm">
       <camera label="Depth Camera" url="http://{{vision_server}}/depth_feed"></camera>
