--- a/marvin_ui2/src/app/controls/camera/camera.component.html
+++ b/marvin_ui2/src/app/controls/camera/camera.component.html
@@ -4,6 +4,6 @@
         <mat-card-title>{{ label }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <img src="{{url}}" style="width: 100%;"/>
+      <img src="{{vision_server}}/{{feed}}_feed" style="width: 100%;"/>
     </mat-card-content>
 </mat-card>
